project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # NGINX rewrite function
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: front-end.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 8081
    # front-end seems to need to hit broker-service through ingress (i.e. fetch(http://broker-service.info) instead of using k8s service broker-service:8080)
    - host: broker-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8080
